--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@
 permalink:           pretty
 
 # Setup
-title:               Poole
-tagline:             The Jekyll Butler
-url:                 http://getpoole.com
+title:               Rob Gaston
+tagline:             blog
+url:                 http://blog.rgaston.com
 paginate:            1
 baseurl:             ""
 
@@ -17,14 +17,14 @@ sass:
 
 # About/contact
 author:
-  name:              Mark Otto
-  url:               https://twitter.com/mdo
-  email:             markdotto@gmail.com
+  name:              Rob Gaston
+  url:               https://rgaston.com
+  email:             rob.m.gaston@gmail.com
 
 # Custom vars
 version:             2.0.0
 github:
-  repo:              https://github.com/poole/poole
+  repo:              https://github.com/rgaston/blog
 
 # Gems
 gems:
