--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ permalink:           pretty
 
 # Setup
 title:               Rob Gaston
-tagline:             web|maps|culture|politics
+tagline:
 url:                 http://blog.rgaston.com
 paginate:            1
 baseurl:             ""
